Renaming the backend

--- a/LennudBackend/src/main/resources/application.properties
+++ b/LennudBackend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=LennuPlaneerija
+spring.application.name=LennudBackend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/flightsdb
 spring.datasource.driverClassName=org.postgresql.Driver
